Fix problem w. bg image not covering the entire page at 380 px width & below

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -222,6 +222,10 @@ footer {
     overflow: scroll;
 }
 
+#id_image {
+    width: 100%;
+}
+
 /* Past Journals Page */
 .view-more {
     text-align: center;
